// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`enabled-limit-field Renders \`enabled-limit-field\` with custom props 1`] = `
<div
  class="layout mb-3 align-center"
>
  <div
    class="flex xs5"
  >
    <c-enabled-field-stub
      hide-details="hide-details"
      value="true"
    />
  </div>
  <div
    class="flex xs7"
  >
    <div
      class="v-input v-text-field v-input--hide-details v-input--is-label-active v-input--is-dirty theme--light"
    >
      <div
        class="v-input__control"
      >
        <div
          class="v-input__slot"
        >
          <div
            class="v-text-field__slot"
          >
            <label
              aria-hidden="true"
              class="v-label v-label--active theme--light"
              style="left: 0px; position: absolute;"
            >
              Custom label
            </label>
            <input
              aria-label="Custom label"
              min="1"
              name="custom-name"
              type="number"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`enabled-limit-field Renders \`enabled-limit-field\` with default props 1`] = `
<div
  class="layout mb-3 align-center"
>
  <div
    class="flex xs5"
  >
    <c-enabled-field-stub
      hide-details="hide-details"
    />
  </div>
  <div
    class="flex xs7"
  >
    <div
      class="v-input v-text-field v-input--hide-details v-input--is-label-active v-input--is-dirty v-input--is-disabled theme--light"
    >
      <div
        class="v-input__control"
      >
        <div
          class="v-input__slot"
        >
          <div
            class="v-text-field__slot"
          >
            <input
              disabled="disabled"
              min="1"
              name="enabledLimitValue"
              type="number"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
